Adding draft news summaries by Gemini and ChatGPT

--- a/2025/2025-10-19-wir.md
+++ b/2025/2025-10-19-wir.md
@@ -16,11 +16,30 @@ Act like a veteran tech journalist. Please summarize the news article in this br
 
 -->
 
-- **Markets:** <!-- Big selloff underway coming into the week. Some even calling it a "crash." Check for updates as needed Friday. --> ([]())
+- **Markets:** <!-- Big selloff underway coming into the week. Some even calling it a "crash." Check for updates as needed Friday. --> ([]()) **Bitcoin's price experienced extreme volatility,** with a record single-day liquidation event briefly sending it below the $110,000 mark. Despite the market shock, institutional demand remains robust, with BlackRock's spot Bitcoin ETF (IBIT) approaching $100 billion in assets under management, underscoring the duality of growing mainstream investment and continued market fragility. ([Investopedia](https://www.investopedia.com/here-s-what-investors-need-to-know-about-this-weekend-s-massive-crypto-rout-11829385) / [Crypto.com](https://crypto.com/en/market-updates/whats-next-for-btc-price-past-120k), Oct. 14-15, 2025) <!-- Article curated and summarized by Gemini --> | **The altcoin market is grappling with a multi-billion dollar "token unlock" deluge,** which is injecting "unprecedented liquidity and potential volatility" into the ecosystem. This period of market risk is highlighted by several massive releases, including those for Aptos, Aethir, and Bittensor, which combined represent a significant portion of the total supply for these tokens. ([Financial Content](https://markets.financialcontent.com/wedbush/article/breakingcrypto-2025-10-12-over-1-billion-in-altcoins-unleashed-navigating-the-october-2025-token-unlock-deluge), Oct. 12, 2025) <!-- Article curated and summarized by Gemini -->
+
 - GalaxyOne product launch. New consumer-facing product from Galaxy Digital. <!-- Link TK --> ([]())
+
 - Bloomberg News reports that Securitize may go public soon through a SPAC. ([]()) <!-- Link TK -->
-- tk ([]())
+
 - **ICYMI:** A recent EY survey found that more than half of large firms have incurred losses from early AI rollouts. https://www.reuters.com/business/most-companies-suffer-some-risk-related-financial-loss-deploying-ai-ey-survey-2025-10-08/ <!-- Link surfaced and summarized by ChagGPT. -->
+
+- **Salesforce to invest $15 billion in San Francisco as AI race heats up** — Salesforce announced it will spend $15B over five years to build an AI incubator hub, accelerate adoption of agents, and bolster its competitiveness in the enterprise AI space. ([Reuters](https://www.reuters.com/business/salesforce-invest-15-billion-san-francisco-over-five-years-2025-10-13/?utm_source=chatgpt.com)) <!-- Article curated and summarized by ChatGPT -->
+
+- **California enacts law requiring AI systems to disclose when users are interacting with AI** — SB 243, signed Oct. 13, mandates that companion AI chatbots clearly notify users they are conversing with an AI rather than a human. The law also includes reporting rules for mental health risks starting 2026. ([The Verge](https://www.theverge.com/news/798875/california-just-passed-a-new-law-requiring-ai-to-tell-you-its-ai?utm_source=chatgpt.com)) <!-- Article curated and summarized by ChatGPT -->
+
+- **OpenAI taps Broadcom to build its first custom AI processor** — The new deal calls for Broadcom to manufacture AI-focused chips designed by OpenAI, deploying up to 10 GW of capacity starting in H2 2026. ([Reuters](https://www.reuters.com/business/openai-taps-broadcom-build-its-first-ai-processor-latest-chip-deal-2025-10-13/?utm_source=chatgpt.com)) <!-- Article curated and summarized by ChatGPT -->
+
+
+- **New NYC Office of Digital Assets & Blockchain launched** — New York City established a civic agency (Executive Order 57) to promote use of blockchain and digital assets, coordinating innovation, regulation, and public-sector pilot projects. ([GovTech](https://www.govtech.com/products/new-nyc-office-looks-to-advance-the-use-of-digital-assets?utm_source=chatgpt.com))  <!-- Article curated and summarized by ChatGPT -->
+
+- **Crypto hype ripples into real-world assets, debt, and markets** — Tokenization is creeping into traditional finance: real‑world assets (RWAs) on chain, treasury-backed tokens, and tokenized money-market products are gaining traction, though still facing regulatory and structural challenges.  ([MarketWatch](https://www.marketwatch.com/story/crypto-hype-is-affecting-everything-from-real-estate-to-treasurys-heres-how-to-play-it-51f501ed?utm_source=chatgpt.com)) <!-- Article curated and summarized by ChatGPT -->
+
+- **Apple announced the M5 chip,** which delivers a "next big leap" in AI performance with a next-generation GPU that includes dedicated Neural Accelerators in every core. The chip is slated to power the newest versions of the MacBook Pro, iPad Pro, and Apple Vision Pro, signaling a major push to accelerate on-device AI workloads. ([Apple Newsroom](https://www.apple.com/newsroom/2025/10/apple-unleashes-m5-the-next-big-leap-in-ai-performance-for-apple-silicon/), Oct. 15, 2025) <!-- Article curated and summarized by Gemini -->
+
+- **OpenAI's DevDay solidified its move toward a platform economy** with the unveiling of the new ChatGPT Apps SDK. This developer kit will enable the creation of commercial mini-apps on the ChatGPT platform, effectively transforming the chatbot into a universal software ecosystem, just as the company is reported to have hit a staggering $500 billion valuation. ([Educational Technology and Change Journal](https://etcjournal.com/2025/10/13/three-biggest-ai-stories-in-october-2025/), Oct. 13, 2025) <!-- Article curated and summarized by Gemini -->
+
+- **CME Group, one of the world's leading derivatives marketplaces, expanded its institutional crypto offerings** by launching options on Solana (SOL) and XRP futures. The move signifies the growing mainstream acceptance of a wider range of digital assets and follows the completion of the first block trades for both the SOL and XRP options shortly after the announcement. ([Stock Titan](https://www.stocktitan.net/news/CME/cme-group-announces-first-trades-of-options-on-solana-and-xrp-h74x93ma40y9.html), Oct. 14, 2025) <!-- Article curated and summarized by Gemini -->
 
 ### Market Snapshot
 
@@ -79,8 +98,10 @@ Act like a veteran tech journalist. Please summarize the news article in this br
 
 ### Looking Ahead
 
-- tk ([]())
-- tk ([]())
+- **UK regulator proposes regime to allow tokenisation of investment funds** — The UK’s FCA has unveiled a plan to permit tokenised funds (including a “direct to fund” model) using public blockchains, aiming to modernize settlement, reduce friction, and improve accessibility. ([Financial Times](https://www.ft.com/content/b26f13bd-516f-40f8-b995-332e933fc9b9?utm_source=chatgpt.com)) <!-- Article curated and summarized by ChatGPT -->
+
+- **A new study published in the *Harvard Business Review* exposed a growing phenomenon called "workslop,"** which is defined as AI-generated content that lacks the substance to meaningfully advance a task. The report found that over 40% of US employees receive such content, leading researchers to conclude that rushed AI deployment without proper training is "destroying productivity." ([The Guardian](https://www.theguardian.com/business/2025/oct/12/ai-workslop-us-employees), Oct. 12, 2025) <!-- Article curated and summarized by Gemini -->
+
 - New study in JAMA re: kids and social media. ([Fast Company](https://www.fastcompany.com/91421943/social-media-could-be-shaping-how-kids-brains-learn-and-not-for-the-better))
 
 ### Odds & Ends
