Making copyedits suggested by Copilot

--- a/2025/2025-10-19-wir.md
+++ b/2025/2025-10-19-wir.md
@@ -2,7 +2,7 @@
 ## TKTKTK
 
 ![A network of above-ground power lines at sunset](https://w3w.news/img/powerlines-matthew-henry-2400-unsplash.jpg)  
-*Photo by Matthew Henry via [Unsplash](https://unsplash.com/@matthewhenry)* 
+*Photo by Matthew Henry via [Unsplash](https://unsplash.com/@matthewhenry)*
 
 **American AI companies' scramble for access** to scarce chips and power is heating up:
 
@@ -12,17 +12,17 @@
 
 - **Meta struck a pair of AI-related deals.** Along with Blue Owl, it [raised $30 billion](https://www.businesstimes.com.sg/companies-markets/telcos-media-tech/meta-blue-owl-seal-us30-billion-private-capital-deal-ai)<!-- Article surfaced and summarized by Gemini --> to build a new data center in Louisiana. The social giant also [tapped Arm Holdings](https://www.reuters.com/business/media-telecom/meta-taps-arm-holdings-power-ai-recommendations-across-facebook-instagram-2025-10-15/?utm_source=chatgpt.com)<!-- Link surfaced and summarized by ChatGPT.--> to supply chips to handle AI recommendations across Facebook and Instagram. The deal includes a $1.5 billion investment to build a new AI data center in Texas.
 
-- **Analysts say America should be adding** about 80 gigawatts of new power generation capacity a year to keep pace with the growth of AI and other tech applications. But it’s currently building less than 65 gigawatts a year. As a result, AI data centers are increasingly building on-site generation as a workaround to the existing U.S. power grid. ([Wall Street Journal](https://www.wsj.com/business/energy-oil/ai-data-centers-desperate-for-electricity-are-building-their-own-power-plants-291f5c81?st=iCbEVn&reflink=desktopwebshare_permalink)<!-- Link surfaced by me-->)
+- **Analysts say the U.S. should be adding** about 80 gigawatts of new power generation capacity a year to keep pace with the growth of AI and other tech applications. But the country has recently been building less than 65 gigawatts a year. As a result, AI data centers are increasingly building on-site generation as a workaround to the existing U.S. power grid. ([Wall Street Journal](https://www.wsj.com/business/energy-oil/ai-data-centers-desperate-for-electricity-are-building-their-own-power-plants-291f5c81?st=iCbEVn&reflink=desktopwebshare_permalink)<!-- Link surfaced by me-->)
 
 - **Salesforce announced it will invest $15 billion** over five years to build a hub on its San Francisco campus to incubate adoption of AI. ([Reuters](https://www.reuters.com/business/salesforce-invest-15-billion-san-francisco-over-five-years-2025-10-13/?utm_source=chatgpt.com)) <!-- Article surfaced and summarized by ChatGPT -->
 
-**To me, these sort of headlines** echo something Ken Auletta described in [Googled](https://www.penguinrandomhouse.ca/books/302509/googled-by-ken-auletta/9780143118046), his excellent book about the search giant's early history.
+**To me, these sorts of headlines** echo something Ken Auletta described in [Googled](https://www.penguinrandomhouse.ca/books/302509/googled-by-ken-auletta/9780143118046), his excellent book about the search giant's early history.
 
 Auletta recounts that founders Larry Page and Sergey Brin would often distinguish between "electron problems" and "atom problems" their company might face. Back in the aughts, those terms were a useful shorthand for things that could be fixed in software versus things related to computer hardware or other limitations of the physical world.
 
 We should remember that same framework very much applies to AI now. And if you want to know where the broader AI boom's limitations might ultimately lie, perhaps start with the "atom problems."
 
-### Week in Review: Oct. 12-18, 2025
+### Week in Review: Oct. 12–18, 2025
 
 - **China is surpassing the U.S.** in producing powerful and popular open-source AI tools. So says the Washington Post's Kevin Schaul, based on [an analysis ](https://www.washingtonpost.com/technology/2025/10/13/china-us-open-source-ai/)<!-- Article surfaced by Gemini --> of trends on LMArena, a site that uses blind tests to discover which AI outputs users prefer.
 
@@ -37,6 +37,19 @@ We should remember that same framework very much applies to AI now. And if you w
 ### Market Snapshot
 
 *A quick look at some major indicators as of Friday's close on Wall Street:* <!-- See spreadsheet at https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?gid=1586624920#gid=1586624920 -->
+
+| Indicator | Close | Weekly | YTD |
+|---|---:|---:|---:|
+| [Bitcoin](https://coinmarketcap.com/currencies/bitcoin/) | $106,490.47 | -8.7% | +13.5% |
+| [Gold](https://finance.yahoo.com/quote/GC%3DF?p=GC%253DF) | $4,213.30/oz | +5.3% | +60.3% |
+| [USD Index](https://finance.yahoo.com/quote/DX-Y.NYB?p=DX-Y.NYB&.tsrc=fin-srch) | 98.54 | -0.3% | -9.2% |
+| [10‑yr U.S. Treasury Yield](https://finance.yahoo.com/quote/%5ETNX/) | 4.007% | -0.044 | -0.566 |
+| [Nasdaq 100](https://finance.yahoo.com/quote/%5ENDX/components?p=%255ENDX) | 24,817.95 | +0.4% | +18.1% |
+| [MSCI All-Country World Index (ex US)](https://www.msci.com/indexes/index/899901) | 1,067.25 | +2.5% | +27.3% |
+
+<!--
+
+HTML version...
 
 <table>
 
@@ -88,6 +101,8 @@ We should remember that same framework very much applies to AI now. And if you w
     </tr>
   </tbody>
 </table>
+
+-->
 
 ### Looking Ahead
 
