Writing through news summaries

--- a/2025/2025-10-26-wir.md
+++ b/2025/2025-10-26-wir.md
@@ -53,7 +53,7 @@ Some leftover headlines from the last week or two about AI's downsides below...
 
 - Several crypto companies are seeking federal banking charters in the U.S> https://www.theblock.co/post/376166/crypto-com-seeks-occ-federal-charter-joining-coinbase-ripple-and-others <!-- Story curated by me. --> | Ripple launching new prime brokerage business. <!-- Link TK -->
 
-- Bloomberg's Muyao Shen covered the new Hyperliquid Exchange: https://www.msn.com/en-gb/money/video/hyperliquid-little-known-crypto-powerhouse/vi-AA1OUiHC#details
+- Bloomberg's Muyao Shen covered the new Hyperliquid Exchange: ([Bloomberg News](https://www.msn.com/en-gb/money/video/hyperliquid-little-known-crypto-powerhouse/vi-AA1OUiHC#details))
 
 - **OpenAI updates:** New browser <!-- Link TK --> | [“These nonprofits lobbied to regulate OpenAI — then the subpoenas came”](https://www.theverge.com/ai-artificial-intelligence/801994/openai-subpoenas-intimidation-tactics-nonprofits-elon-musk-restructuring) (The Verge) — ([The Verge][1]) A deep dive into how OpenAI is deploying broad subpoenas against nonprofit organisations critical of its governance and restructuring—which poses serious questions about power, oversight and AI company accountability. <!-- Story curated by ChatGPT --> | **OpenAI Integrates ChatGPT with Enterprise Data Repositories** OpenAI has launched a new "company knowledge" feature for its Business, Enterprise, and Education tiers of ChatGPT, allowing users to search and query data from connected third-party apps like **Slack and GitHub**. This move significantly advances AI's role in the workplace by enabling the models to surface knowledge directly from an organization's internal, proprietary data.        * URL: [OpenAI launches a “company knowledge” ChatGPT update to let Business, Enterprise, and Education users search for data in connected apps like Slack and GitHub](https://www.google.com/search?q=https://www.theverge.com/2025/10/24/24301550/openai-chatgpt-enterprise-company-knowledge-slack-github-search) (Source: The Verge) <!-- Story curated by Google Gemini --> |  [OpenAI launches AI browser “Atlas” in challenge to Google Chrome [https://www.reuters.com/technology/openai-unveils-ai-browser-atlas-2025-10-21/](https://www.reuters.com/technology/openai-unveils-ai-browser-atlas-2025-10-21/) ([Reuters][1]) [1]: https://www.reuters.com/technology/openai-unveils-ai-browser-atlas-2025-10-21/?utm_source=chatgpt.com "OpenAI launches AI browser Atlas in latest challenge to Google" | *Why it matters*: OpenAI’s move into the browser market signals a strategic expansion beyond chatbots, potentially reshaping search, browsing and ad-tech dynamics. <!-- Curated by ChagGPT. -->
 
