--- a/2025/2025-11-02-wir.md
+++ b/2025/2025-11-02-wir.md
@@ -1,27 +1,3 @@
-<!--
-
-Prompt to get AI help with curating stories from around the web...
-
-Please act like an experienced tech journalist. I need some help finding news articles from around the web for my tech newsletter, which typically includes a bulleted list summarizing articles from credible, high-quality news organizations covering the week's most important news about emerging tech.
-
-Attached to this query are:
-
-- A markdown file with sample news summaries from several recent newsletters.
-
-- A JSON file with the names and website URLs of news sources I've recently quoted.
-
-Could you please find the top three news stories on AI and the top three news stories on blockchain that I should include in my next newsletter? I'm looking only for articles that have been published from in the last 24 hours and come either from sources included in the JSON file, or others from around the web that have similar reputation and editorial standards.
-
-Please output your results as markdown. Be sure to include each story's full hyperlink in the markdown code.
-
-
-
-Prompt to get AI help in drafting news summary items...
-
-I'm thinking of using the news article in this browser tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? Do not include a headline.
-
--->
-
 # TKTK
 ## TKTK
 
@@ -32,26 +8,21 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 ### Week in Review: Oct. 26 to Nov. 1, 2025
 
-- **Hyperliquid update** <!-- Need to get something into the newsletter on these guys. Trading volume has been taking off and we haven't mentioned. Some search results that might help: https://duckduckgo.com/?q=hyperliquid+monthly+volume&t=brave&ia=web -->
+- Big Tech Milestones: WSJ on how Apple staved off tariff disaster this year. https://www.wsj.com/tech/apple-2025-tim-cook-36af914a?st=YwMB3F&reflink=desktopwebshare_permalink | NVidia hit $5T valuation. Yowza. <!-- Link TK --> | Global stocks are quietly outperforming the US. https://www.wsj.com/finance/stocks/u-s-stocks-are-breaking-records-the-rest-of-the-world-is-doing-better-8e1005be?st=DkHYTc&reflink=desktopwebshare_permalink
 
+- **Hyperliquid update** tk <!-- Need to get something into the newsletter on these guys. Trading volume has been taking off and we haven't mentioned. Some search results that might help: https://duckduckgo.com/?q=hyperliquid+monthly+volume&t=brave&ia=web -->
 
-<!-- A heap o' leftovers from last week... -->
+- CZ buying off Trump. https://www.wsj.com/finance/currencies/binance-trump-crypto-pardon-cz-changpeng-zhao-1007fde9?st=sEv6SW&reflink=desktopwebshare_permalink
 
-- **Major Study Finds AI Chatbots Misrepresent News Content Nearly Half the Time** A new study by 22 international public service media organizations, including the BBC and NPR, found that AI assistants like ChatGPT, Copilot, and Google's Gemini systematically distort news content in 45% of responses. The research found significant sourcing problems and factual errors, raising major alarms over AI's role in information integrity as public reliance on these tools for news consumption grows. ([DW](https://www.dw.com/en/ai-chatbots-misrepresent-news-almost-half-the-time-says-major-new-study/a-74392921)) <!-- Story curated by Google Gemini
+- **Misadventures in AI:** tk
+<!--
+Digest a bunch o' string from last week...
 
-- **A new study published in the Harvard Business Review exposed a growing phenomenon called "workslop,"** which is defined as AI-generated content that lacks the substance to meaningfully advance a task. The report found that over 40% of US employees receive such content, leading researchers to conclude that rushed AI deployment without proper training is "destroying productivity." ([The Guardian](https://www.theguardian.com/business/2025/oct/12/ai-workslop-us-employees), Oct. 12, 2025) <!-- Article curated and summarized by Gemini |  The Wikimedia Foundation has reported an 8% decline in human traffic to Wikipedia between May and August 2025, citing the rise of search engines and chatbots providing direct access to Wikipedia content without sending users to the site. This trend, attributed to the growing use of generative AI and social media, has significant implications for the future of online publishing and the sustainability of content creation. ([Decrypt](https://decrypt.co/344845/wikipedia-traffic-drops-ai-answers-eat-free-encyclopedia)) <!-- Article curated by me, summarized by Leo/Llama 3.1 8B
+A new study published in the Harvard Business Review exposed a growing phenomenon called "workslop,"** which is defined as AI-generated content that lacks the substance to meaningfully advance a task. The report found that over 40% of US employees receive such content, leading researchers to conclude that rushed AI deployment without proper training is "destroying productivity." ([The Guardian](https://www.theguardian.com/business/2025/oct/12/ai-workslop-us-employees), Oct. 12, 2025) <!-- Article curated and summarized by Gemini |  The Wikimedia Foundation has reported an 8% decline in human traffic to Wikipedia between May and August 2025, citing the rise of search engines and chatbots providing direct access to Wikipedia content without sending users to the site. This trend, attributed to the growing use of generative AI and social media, has significant implications for the future of online publishing and the sustainability of content creation. ([Decrypt](https://decrypt.co/344845/wikipedia-traffic-drops-ai-answers-eat-free-encyclopedia)) <!-- Article curated by me, summarized by Leo/Llama 3.1 8B | AI assistants make widespread sourcing errors, new research finds [https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/](https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/) ([Reuters][4]) *Why it matters*: As AI becomes more embedded in workflows (news, search, assistance) the “trust” and “accuracy” aspects are coming into sharper focus — relevant for enterprise and consumer contexts. [4]: https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/?utm_source=chatgpt.com "AI assistants make widespread errors about the news, new ..."  <!-- Curated by ChagGPT. | **Experts warn that the growing use of AI in clinical settings could create an intractable "blame game" for medical failings.** The introduction of AI-powered tools for diagnosis and care raises complex legal issues, as patients may face significant barriers in demonstrating fault due to a lack of transparency into the AI's internal workings and a challenge in proposing a reasonable alternative design. The report, which came out of a summit hosted by the *Journal of the American Medical Association (JAMA)*, highlights the need for dedicated funding to properly assess AI tool performance in real-world clinical use. ([The Guardian](https://www.theguardian.com/technology/2025/oct/13/ai-tools-medical-health-liability-artificial-intelligence)) <!-- Article curated and summarized by Gemini | **Cisco Study: Only 13% of Global Enterprises Are ‘AI-Ready’ for Scaled Deployment** The Cisco 2025 AI Readiness Index revealed that while virtually all businesses are experimenting with AI, only 13% are truly prepared to deploy and scale AI solutions with measurable value. The report suggests most companies face significant gaps in critical areas like data quality, security, talent, and governance, indicating that the path from AI pilot to enterprise transformation remains highly challenging. [Link](https://dig.watch/updates/new-cisco-study-shows-most-companies-arent-ai-ready) <!-- Story curated by Google Gemini | **Major Study Finds AI Chatbots Misrepresent News Content Nearly Half the Time** A new study by 22 international public service media organizations, including the BBC and NPR, found that AI assistants like ChatGPT, Copilot, and Google's Gemini systematically distort news content in 45% of responses. The research found significant sourcing problems and factual errors, raising major alarms over AI's role in information integrity as public reliance on these tools for news consumption grows. ([DW](https://www.dw.com/en/ai-chatbots-misrepresent-news-almost-half-the-time-says-major-new-study/a-74392921)) <!-- Story curated by Google Gemini | [“These nonprofits lobbied to regulate OpenAI — then the subpoenas came”](https://www.theverge.com/ai-artificial-intelligence/801994/openai-subpoenas-intimidation-tactics-nonprofits-elon-musk-restructuring) (The Verge) — ([The Verge][1]) A deep dive into how OpenAI is deploying broad subpoenas against nonprofit organisations critical of its governance and restructuring—which poses serious questions about power, oversight and AI company accountability. <!-- Story curated by ChatGPT -->
 
-- AI assistants make widespread sourcing errors, new research finds [https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/](https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/) ([Reuters][4]) *Why it matters*: As AI becomes more embedded in workflows (news, search, assistance) the “trust” and “accuracy” aspects are coming into sharper focus — relevant for enterprise and consumer contexts. [4]: https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/?utm_source=chatgpt.com "AI assistants make widespread errors about the news, new ..."  <!-- Curated by ChagGPT.
-
-- **Experts warn that the growing use of AI in clinical settings could create an intractable "blame game" for medical failings.** The introduction of AI-powered tools for diagnosis and care raises complex legal issues, as patients may face significant barriers in demonstrating fault due to a lack of transparency into the AI's internal workings and a challenge in proposing a reasonable alternative design. The report, which came out of a summit hosted by the *Journal of the American Medical Association (JAMA)*, highlights the need for dedicated funding to properly assess AI tool performance in real-world clinical use. ([The Guardian](https://www.theguardian.com/technology/2025/oct/13/ai-tools-medical-health-liability-artificial-intelligence)) <!-- Article curated and summarized by Gemini
-
-- AI assistants make widespread sourcing errors, new research finds [https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/](https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/) ([Reuters][4]) *Why it matters*: As AI becomes more embedded in workflows (news, search, assistance) the “trust” and “accuracy” aspects are coming into sharper focus — relevant for enterprise and consumer contexts. [4]: https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/?utm_source=chatgpt.com "AI assistants make widespread errors about the news, new ..."  <!-- Curated by ChagGPT.
-
-- **Experts warn that the growing use of AI in clinical settings could create an intractable "blame game" for medical failings.** The introduction of AI-powered tools for diagnosis and care raises complex legal issues, as patients may face significant barriers in demonstrating fault due to a lack of transparency into the AI's internal workings and a challenge in proposing a reasonable alternative design. The report, which came out of a summit hosted by the *Journal of the American Medical Association (JAMA)*, highlights the need for dedicated funding to properly assess AI tool performance in real-world clinical use. ([The Guardian](https://www.theguardian.com/technology/2025/oct/13/ai-tools-medical-health-liability-artificial-intelligence)) <!-- Article curated and summarized by Gemini
-
-- [“These nonprofits lobbied to regulate OpenAI — then the subpoenas came”](https://www.theverge.com/ai-artificial-intelligence/801994/openai-subpoenas-intimidation-tactics-nonprofits-elon-musk-restructuring) (The Verge) — ([The Verge][1]) A deep dive into how OpenAI is deploying broad subpoenas against nonprofit organisations critical of its governance and restructuring—which poses serious questions about power, oversight and AI company accountability. <!-- Story curated by ChatGPT
-
-- **Cisco Study: Only 13% of Global Enterprises Are ‘AI-Ready’ for Scaled Deployment** The Cisco 2025 AI Readiness Index revealed that while virtually all businesses are experimenting with AI, only 13% are truly prepared to deploy and scale AI solutions with measurable value. The report suggests most companies face significant gaps in critical areas like data quality, security, talent, and governance, indicating that the path from AI pilot to enterprise transformation remains highly challenging. [Link](https://dig.watch/updates/new-cisco-study-shows-most-companies-arent-ai-ready) <!-- Story curated by Google Gemini
+- tk ([]())
+- tk ([]())
+- tk ([]())
 
 ### Market Snapshot
 
@@ -110,7 +81,7 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 ### Looking Ahead
 
-- tk ([]())
+- The Ballad of the Prodigal Techbro. ([](https://conversationalist.org/2020/03/05/the-prodigal-techbro/))
 - tk ([]())
 - tk ([]())
 
