Adding some storylinks curated by ChatGPT, Google Gemini

--- a/2025/2025-11-09-wir.md
+++ b/2025/2025-11-09-wir.md
@@ -6,7 +6,7 @@
 
 **Lead item goes here.** Yadda yadda yadda.
 
-### Week in Review: Oct. 26 to Nov. 1, 2025
+### Week in Review: Nov. 2-8, 2025
 
 - Big Tech Milestones: WSJ on how Apple staved off tariff disaster this year. https://www.wsj.com/tech/apple-2025-tim-cook-36af914a?st=YwMB3F&reflink=desktopwebshare_permalink | NVidia hit $5T valuation. Yowza. <!-- Link TK --> | Global stocks are quietly outperforming the US. https://www.wsj.com/finance/stocks/u-s-stocks-are-breaking-records-the-rest-of-the-world-is-doing-better-8e1005be?st=DkHYTc&reflink=desktopwebshare_permalink
 
@@ -20,9 +20,105 @@ Digest a bunch o' string from last week...
 
 A new study published in the Harvard Business Review exposed a growing phenomenon called "workslop,"** which is defined as AI-generated content that lacks the substance to meaningfully advance a task. The report found that over 40% of US employees receive such content, leading researchers to conclude that rushed AI deployment without proper training is "destroying productivity." ([The Guardian](https://www.theguardian.com/business/2025/oct/12/ai-workslop-us-employees), Oct. 12, 2025) <!-- Article curated and summarized by Gemini |  The Wikimedia Foundation has reported an 8% decline in human traffic to Wikipedia between May and August 2025, citing the rise of search engines and chatbots providing direct access to Wikipedia content without sending users to the site. This trend, attributed to the growing use of generative AI and social media, has significant implications for the future of online publishing and the sustainability of content creation. ([Decrypt](https://decrypt.co/344845/wikipedia-traffic-drops-ai-answers-eat-free-encyclopedia)) <!-- Article curated by me, summarized by Leo/Llama 3.1 8B | AI assistants make widespread sourcing errors, new research finds [https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/](https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/) ([Reuters][4]) *Why it matters*: As AI becomes more embedded in workflows (news, search, assistance) the “trust” and “accuracy” aspects are coming into sharper focus — relevant for enterprise and consumer contexts. [4]: https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/?utm_source=chatgpt.com "AI assistants make widespread errors about the news, new ..."  <!-- Curated by ChagGPT. | **Experts warn that the growing use of AI in clinical settings could create an intractable "blame game" for medical failings.** The introduction of AI-powered tools for diagnosis and care raises complex legal issues, as patients may face significant barriers in demonstrating fault due to a lack of transparency into the AI's internal workings and a challenge in proposing a reasonable alternative design. The report, which came out of a summit hosted by the *Journal of the American Medical Association (JAMA)*, highlights the need for dedicated funding to properly assess AI tool performance in real-world clinical use. ([The Guardian](https://www.theguardian.com/technology/2025/oct/13/ai-tools-medical-health-liability-artificial-intelligence)) <!-- Article curated and summarized by Gemini | **Cisco Study: Only 13% of Global Enterprises Are ‘AI-Ready’ for Scaled Deployment** The Cisco 2025 AI Readiness Index revealed that while virtually all businesses are experimenting with AI, only 13% are truly prepared to deploy and scale AI solutions with measurable value. The report suggests most companies face significant gaps in critical areas like data quality, security, talent, and governance, indicating that the path from AI pilot to enterprise transformation remains highly challenging. [Link](https://dig.watch/updates/new-cisco-study-shows-most-companies-arent-ai-ready) <!-- Story curated by Google Gemini | **Major Study Finds AI Chatbots Misrepresent News Content Nearly Half the Time** A new study by 22 international public service media organizations, including the BBC and NPR, found that AI assistants like ChatGPT, Copilot, and Google's Gemini systematically distort news content in 45% of responses. The research found significant sourcing problems and factual errors, raising major alarms over AI's role in information integrity as public reliance on these tools for news consumption grows. ([DW](https://www.dw.com/en/ai-chatbots-misrepresent-news-almost-half-the-time-says-major-new-study/a-74392921)) <!-- Story curated by Google Gemini | [“These nonprofits lobbied to regulate OpenAI — then the subpoenas came”](https://www.theverge.com/ai-artificial-intelligence/801994/openai-subpoenas-intimidation-tactics-nonprofits-elon-musk-restructuring) (The Verge) — ([The Verge][1]) A deep dive into how OpenAI is deploying broad subpoenas against nonprofit organisations critical of its governance and restructuring—which poses serious questions about power, oversight and AI company accountability. <!-- Story curated by ChatGPT -->
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- **Microsoft's AI Investments:** Microsoft signed a $\$9.7$ billion cloud services agreement with Australian AI infrastructure provider IREN to secure access to Nvidia chips, aiming to bolster its capacity to meet surging AI demand. This deal, along with a revised agreement with **OpenAI**, briefly pushed Microsoft's valuation to $\$4$ trillion for the second time this year. Furthermore, Microsoft plans to ship over 60,000 Nvidia Blackwell AI chips to the United Arab Emirates for use in data centers. <!--
+
+Gemini
+
+| *Wall Street Journal / AP News* | **Microsoft-IREN deal: Tech giant inks $9.7 billion AI cloud pact for Nvidia chips; aims to bolster data centre capacity amid soaring AI demand** | [https://timesofindia.indiatimes.com/business/international-business/microsoft-iren-deal-tech-giant-inks-9-7-billion-ai-cloud-pact-for-nvidia-chips-aims-to-bolster-data-centre-capacity-amid-soaring-ai-demand/articleshow/125059641.cms](https://timesofindia.indiatimes.com/business/international-business/microsoft-iren-deal-tech-giant-inks-9-7-billion-ai-cloud-pact-for-nvidia-chips-aims-to-bolster-data-centre-capacity-amid-soaring-ai-demand/articleshow/125059641.cms) |
+| *Wall Street Journal / New York Times* | **Early Edition: November 4, 2025 (Microsoft to ship Nvidia chips to UAE)** | [https://www.justsecurity.org/123933/early-edition-november-4-2025/](https://www.google.com/search?q=https://www.justsecurity.org/123933/early-edition-november-4-2025/) |
+
+-->
+
+- **AI and Economic Warnings:*- **Goldman Sachs** CEO David Solomon warned about the U.S.'s $\$38$ trillion national debt, stating that accelerating economic growth—specifically one led by AI—is the key factor to resolve the issue. Separately, the "Godfather of AI," Geoffrey Hinton, cautioned that while tech billionaires like Elon Musk could see substantial financial gains, unchecked AI adoption will likely lead to widespread job losses due to automation. <!-- Gemini -->
+
+<!--
+
+| *Goldman Sachs / JPMorgan* | **AI-led growth offers ‘way out’: Goldman Sachs CEO David Solomon joins JPMorgan’s Jamie Dimon on US national debt problem** | [https://timesofindia.indiatimes.com/technology/tech-news/ai-led-growth-offers-way-out-goldman-sachs-ceo-david-solomon-joins-jpmorgans-jamie-dimon-on-ais-dark-future/articleshow/125064010.cms](https://www.google.com/search?q=https://timesofindia.indiatimes.com/technology/tech-news/ai-led-growth-offers-way-out-goldman-sachs-ceo-david-solomon-joins-jpmorgans-jamie-dimon-on-ais-dark-future/articleshow/125064010.cms) |
+
+-->
+
+
+- **Market Impact:** The **S&P 500** has been driven higher by AI enthusiasm, primarily from companies like **Nvidia** and **Microsoft**, even as most other shares declined. <!-- Gemini -->
+
+<!--
+
+| *Bloomberg Wall Street* | **“Musk will get richer and a lot of people will get unemployed…”: Geoffrey Hinton warns on AI’s dark future** | [https://timesofindia.indiatimes.com/technology/tech-news/musk-will-get-richer-and-a-lot-of-people-will-get-unemployed-geoffrey-hinton-warns-on-ais-dark-future/articleshow/125075257.cms](https://timesofindia.indiatimes.com/technology/tech-news/musk-will-get-richer-and-a-lot-of-people-will-get-unemployed-geoffrey-hinton-warns-on-ais-dark-future/articleshow/125075257.cms) |
+
+-->
+
+- **Market Dynamics and Sentiment:** <!-- Gemini -->
+    - **Bitcoin's** recent decline in October was characterized as "Red October," but analysts at **Decrypt** believe the drop is a healthy, mid-cycle correction that could set the stage for a bullish November with potential targets up to $\$150,000$ by year-end.
+    - **Ethereum** is showing a potentially bullish signal as a large spot exchange netflow on November 3 indicates investors are buying the dip for long-term holding.
+
+    <!--
+    | *Wall Street Journal / AP News* | **US markets today: Nvidia and AI stocks lift Wall Street even as most shares decline; Dow dips, S\&P 500 nears record high** | [https://timesofindia.indiatimes.com/business/international-business/us-markets-today-nvidia-and-ai-stocks-lift-wall-street-even-as-most-shares-decline-dow-dips-sp-500-nears-record-high/articleshow/125062085.cms](https://timesofindia.indiatimes.com/business/international-business/us-markets-today-nvidia-and-ai-stocks-lift-wall-street-even-as-most-shares-decline-dow-dips-sp-500-nears-record-high/articleshow/125062085.cms) |
+
+    -->
+
+- **Derivatives and Hedging:** The crypto derivatives market is cautiously regaining stability after a historic $\$6$ billion liquidation in October. **Bitcoin** and **Ethereum** prices have been confined to a range, and while open interest in perpetual contracts remains stagnant, the options market shows continued demand for hedging and speculative strategies. <!-- Gemini -->
+
+<!-- | *Decrypt* | **Bitcoin Price Outlook: What's Next After Red October?** | [https://decrypt.co/347231/bitcoin-price-outlook-whats-next-after-red-october](https://decrypt.co/347231/bitcoin-price-outlook-whats-next-after-red-october) |
+
+| *Decrypt* | **Ethereum Traders Buy the Dip Despite Third-Largest Spot Outflow Since October** | [https://decrypt.co/347254/ethereum-traders-buy-the-dip-despite-third-largest-spot-outflow-since-october](https://decrypt.co/347254/ethereum-traders-buy-the-dip-despite-third-largest-spot-outflow-since-october) | -->
+
+
+- **Ecosystem and Company News (The Block, Decrypt):** <!-- Gemini -->
+    * DeFi protocol Stream Finance halted withdrawals and deposits after announcing a $\$93$ million loss.
+    * Stablecoin payments infrastructure platform Zynk successfully raised $\$5$ million in a funding round, with participation from Coinbase Ventures.
+    * Centralized exchange MEXC apologized for freezing a crypto whale's $\$3$ million account for several months before releasing the funds.
+
+<!--
+
+| *The Block* | **Stream Finance halts withdrawals and deposits after $93 million loss disclosed** | [https://www.theblock.co/post/347247/stream-finance-halts-withdrawals-and-deposits-after-93-million-loss-disclosed](https://www.google.com/search?q=https://www.theblock.co/post/347247/stream-finance-halts-withdrawals-and-deposits-after-93-million-loss-disclosed) |
+
+| *The Block* | **Stablecoin-enabled payments infrastructure platform Zynk raises $5 million from Coinbase Ventures and others** | [https://www.theblock.co/post/347273/stablecoin-enabled-payments-infrastructure-platform-zynk-raises-5-million-from-coinbase-ventures-and-others](https://www.google.com/search?q=https://www.theblock.co/post/347273/stablecoin-enabled-payments-infrastructure-platform-zynk-raises-5-million-from-coinbase-ventures-and-others) |
+
+| *Decrypt* | **‘We Fucked Up’: MEXC Exec Promises Changes After Blowup Over Frozen Crypto Millions** | [https://decrypt.co/347164/ripple-prime-clients-access-spot-crypto-trading](https://decrypt.co/347164/ripple-prime-clients-access-spot-crypto-trading) |
+
+| *CNBC* | **Bybit x Block Scholes Report: Cautious Crypto Derivatives, WLFI Volatility Persists** | [https://www.manilatimes.net/2025/11/04/tmt-newswire/pr-newswire/bybit-x-block-scholes-report-cautious-crypto-derivatives-wlfi-volatility-persists/2215762](https://www.manilatimes.net/2025/11/04/tmt-newswire/pr-newswire/bybit-x-block-scholes-report-cautious-crypto-derivatives-wlfi-volatility-persists/2215762) |
+
+
+-->
+
+- [“The great AI build-out shows no sign of slowing” — Reuters](https://www.reuters.com/legal/transactional/great-ai-buildout-shows-no-sign-slowing-2025-10-31/)
+  *Summary:* A comprehensive look at how infrastructure and investment in artificial-intelligence is expanding across industries — despite “bubble talk”. ([Reuters][1]) <!-- ChatGPT -->
+  [1]: https://www.reuters.com/legal/transactional/great-ai-buildout-shows-no-sign-slowing-2025-10-31/?utm_source=chatgpt.com "The great AI buildout shows no sign of slowing"
+
+- [“AI turned Google Cloud from also-ran into Alphabet’s growth driver” — Reuters](https://www.reuters.com/business/ai-turned-google-cloud-also-ran-into-alphabets-growth-driver-2025-10-31/)
+  *Summary:* Details how Google Cloud’s rise has been powered by AI, shifting from a laggard to a key driver for Alphabet Inc.. ([Reuters][2]) <!-- ChatGPT -->
+  [2]: https://www.reuters.com/business/ai-turned-google-cloud-also-ran-into-alphabets-growth-driver-2025-10-31/?utm_source=chatgpt.com "AI turned Google Cloud from also-ran into Alphabet's ..."
+
+
+- [“Taiwan’s MediaTek targets billions in AI accelerator-chip revenue by 2027” — Reuters](https://www.reuters.com/business/media-telecom/taiwans-mediatek-targets-billions-ai-accelerator-chip-revenue-by-2027-2025-10-31/)
+  *Summary:* MediaTek outlines aggressive AI ASIC chip ambitions, signalling the hardware side of the AI boom scaling up in Asia. ([Reuters][3]) <!-- ChatGPT -->
+  [3]: https://www.reuters.com/business/media-telecom/taiwans-mediatek-targets-billions-ai-accelerator-chip-revenue-by-2027-2025-10-31/?utm_source=chatgpt.com "Taiwan's MediaTek targets billions in AI accelerator chip revenue by 2027"
+
+- [“Claude AI vulnerability exposes enterprise data through code-interpreter exploit” — CSO Online](https://www.csoonline.com/article/4082514/claude-ai-vulnerability-exposes-enterprise-data-through-code-interpreter-exploit.html)
+  [4]: https://www.csoonline.com/article/4082514/claude-ai-vulnerability-exposes-enterprise-data-through-code-interpreter-exploit.html?utm_source=chatgpt.com "Claude AI vulnerability exposes enterprise data through code interpreter exploit"
+  *Summary:* A serious security flaw in Claude AI (from Anthropic) shows how even advanced AI tools introduce novel enterprise-risk vectors. ([CSO Online][4]) <!-- ChatGPT -->
+
+- [“Bitcoin breaks October streak with first monthly loss since 2018” — Reuters](https://www.reuters.com/business/finance/bitcoin-breaks-october-streak-with-first-monthly-loss-since-2018-2025-10-31/) *Summary:* Bitcoin’s end to a long October winning streak provides fresh context for crypto market sentiment heading into year-end. ([Reuters][5])
+[5]: https://www.reuters.com/business/finance/bitcoin-breaks-october-streak-with-first-monthly-loss-since-2018-2025-10-31/?utm_source=chatgpt.com "Bitcoin breaks October streak with first monthly loss since 2018"
+<!-- ChatGPT -->
+
+- [“Bitcoin Price Outlook: What’s Next After Red October?” — Decrypt](https://decrypt.co/347231/bitcoin-price-outlook-whats-next-after-red-october)
+  *Summary:* A view that the drop may be a mid-cycle reset rather than a bear turn — valuable insight for crypto-savvy readers. ([Decrypt][6]) [6]: https://decrypt.co/347231/bitcoin-price-outlook-whats-next-after-red-october?utm_source=chatgpt.com "Bitcoin Price Outlook: What's Next After Red October?"
+  <!-- ChatGPT -->
+
+- [“Coinbase holds edge in US crypto race even as rivals' public listings reshape landscape” — Reuters](https://www.reuters.com/business/coinbase-holds-edge-us-crypto-race-even-rivals-public-listings-reshape-landscape-2025-10-31/) Summary:* Coinbase Global continues to dominate U.S. crypto despite a changing competitive/regulatory backdrop. ([Reuters][7]) [7]: https://www.reuters.com/business/coinbase-holds-edge-us-crypto-race-even-rivals-public-listings-reshape-landscape-2025-10-31/?utm_source=chatgpt.com "Coinbase holds edge in US crypto race even as rivals ..." <!-- ChatGPT -->
+
+- [“Committee recommends more study for crypto deregulation bill” — New Hampshire Bulletin](https://www.newhampshirebulletin.com/2025/10/31/committee-recommends-more-study-for-crypto-deregulation-bill/)  *Summary:* A U.S. legislative body signals caution on crypto-mining deregulation, underlining how policy continues to interact with blockchain operations. ([New Hampshire Bulletin][8]) [8]: https://newhampshirebulletin.com/2025/10/31/committee-recommends-more-study-for-crypto-deregulation-bill/?utm_source=chatgpt.com "Committee recommends more study for crypto deregulation bill" <!-- ChatGPT -->
+
+- [OpenAI turns to Amazon in $38 billion cloud services deal after restructuring](https://www.reuters.com/business/retail-consumer/openai-amazon-strike-38-billion-agreement-chatgpt-maker-use-aws-2025-11-03/) — Reuters, Nov 3 2025.
+  *Why it matters:* OpenAI’s major long-term cloud services commitment signals continued expansion of compute infrastructure and the intensifying arms-race in AI platform build-out. ([Reuters][1]) [1]: https://www.reuters.com/business/retail-consumer/openai-amazon-strike-38-billion-agreement-chatgpt-maker-use-aws-2025-11-03/?utm_source=chatgpt.com "OpenAI turns to Amazon in $38 billion cloud services deal ..." <!-- ChatGPT -->
+
+- [SLB launches new AI tool “Tela” to serve energy-industry workflows](https://www.reuters.com/business/energy/slb-launches-new-ai-product-it-focuses-digital-sales-growth-2025-11-03/) — Reuters, Nov 3 2025. *Why it matters:* Demonstrates how AI is moving beyond hype into domain-specific deployment (energy/oil services) — showing the “enterprise operational” phase rather than just pilot projects. ([Reuters][2]) [2]: https://www.reuters.com/business/energy/slb-launches-new-ai-product-it-focuses-digital-sales-growth-2025-11-03/?utm_source=chatgpt.com "SLB launches new AI product as it focuses on digital sales ..." <!-- ChatGPT -->
+
+- [Bitcoin tumbles to lowest in two weeks as risk-off mood hits crypto markets](https://www.reuters.com/world/china/china-offers-tech-giants-cheap-power-boost-domestic-ai-chips-ft-reports-2025-11-04/) — **Note:** this one is more about macro risk than blockchain protocol nuance; use with caution.
+  *Why it matters:* Highlights how broader risk sentiment and macro factors are spilling into crypto asset markets, showing the interconnectedness of blockchain with global finance. ([Bloomberg][3]) [3]: https://www.bloomberg.com/news/articles/2025-11-04/bitcoin-btc-hits-two-week-low-with-risk-appetite-muted-after-wipeout?utm_source=chatgpt.com "Bitcoin Falls to Lowest Since June as Risk-Off Mood Hits ..." <!-- ChatGPT -->
+
+- [Why Bitcoin ETFs started to bleed out as four-day outflows hit $1.34 billion](https://cryptoslate.com/btc-etfs-start-to-bleed-out-as-four-day-outflows-hit-1-34b/) — CryptoSlate, Nov 4 2025.
+  *Why it matters:* The concentrated outflows from major BTC ETF issuers suggest shifting institutional sentiment and potential risk of cascading effects in the crypto asset-funding ecosystem. ([CryptoSlate][4]) [4]: https://cryptoslate.com/btc-etfs-start-to-bleed-out-as-four-day-outflows-hit-1-34b/?utm_source=chatgpt.com "Why Bitcoin ETFs started to bleed out as four-day outflows ..." <!-- ChatGPT -->
 
 ### Market Snapshot
 
